--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 						</tr>
 						<tr class="borde">
 							<td class="borde">HYUNDAI</td>
-							<td class="borde">CAJA REFRIGERADORA</td>
+							<td class="borde">CAJA REFRIGERADA</td>
 							<td class="borde">SEMIRREMOLQUE DE DOS EJES</td>
 							<td class="borde">2005</td>
 							<td class="borde">3H3V532C95T082002</td>
